@@ -668,7 +668,7 @@ for module in ( "GafferTest", "GafferUITest" ) :
 scriptsInstall = env.Install( "$BUILD_DIR/bin", [ "bin/gaffer", "bin/gaffer.py" ] )
 env.Alias( "build", scriptsInstall )
 
-for app in ( "gui", "view", "test", "cli", "license", "op", "python" ) :
+for app in ( "gui", "view", "test", "cli", "license", "op", "python", "execute" ) :
 	appInstall = env.Install( "$BUILD_DIR/apps/%s" % app, "apps/%s/%s-1.py" % ( app, app ) )
 	env.Alias( "build", appInstall )
 
